Update and rename subgraph/indexer/nginx.conf to subgraph/indexer/proxy/sq.pathrocknetwork.org.conf

--- a/subgraph/indexer/proxy/sq.pathrocknetwork.org.conf
+++ b/subgraph/indexer/proxy/sq.pathrocknetwork.org.conf
@@ -99,7 +99,7 @@ http {
         listen 443 ssl; // Update the ports to listen on
         listen [::]:443 ssl;
 
-        server_name proxy.mysqindexer.com; // update the server name to match your DNS address
+        server_name sq.pathrocknetwork.org; // update the server name to match your DNS address
 
         location / {
         proxy_pass      http://127.0.0.1:1080;
