--- a/subgraph/indexer/proxy/sq.pathrocknetwork.org.conf
+++ b/subgraph/indexer/proxy/sq.pathrocknetwork.org.conf
@@ -29,3 +29,30 @@ server {
     }
 
 }
+# Coordinator Metrics Proxy
+server {
+    listen 8011;
+#    listen [::]:8010 ssl;
+
+    server_name sq.pathrocknetwork.org;
+#    ssl_certificate     /etc/letsencrypt/live/sq.pathrocknetwork.org/fullchain.pem;
+#    ssl_certificate_key /etc/letsencrypt/live/sq.pathrocknetwork.org/privkey.pem;
+    location / {
+
+    proxy_pass http://127.0.0.1:8000;
+
+    }
+
+}
+
+# Indexer Proxy Metrics
+server {
+    listen 10080;
+    server_name sq.pathrocknetwork.org;
+    location / {
+
+    proxy_pass http://127.0.0.1:1081;
+
+    }
+
+}
