--- a/subquery-indexer/proxy_configs/haproxy/haproxy.cfg
+++ b/subquery-indexer/proxy_configs/haproxy/haproxy.cfg
@@ -35,23 +35,23 @@ defaults
 
 
 frontend admin_proxy
-    bind 65.108.68.51:8111 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
+    bind :8111 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
     http-request redirect scheme https unless { ssl_fc }
     use_backend admin_backend
     default_backend admin_backend
 
 backend admin_backend
     default-server check maxconn 25
-    server subgraph_admin 10.160.212.33:8000
+    server subgraph_admin :8000
 
 frontend indexer_proxy
-    bind 65.108.68.51:443 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
+    bind :443 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
     http-request redirect scheme https unless { ssl_fc }
     use_backend indexer_backend
     default_backend indexer_backend
 
 backend indexer_backend
     default-server check maxconn 25
-    server indexer_proxy 10.160.212.33:1080
+    server indexer_proxy :1080
 
 
