--- a/subquery-indexer/proxy_configs/nginx/sq.pathrocknetwork.org.conf
+++ b/subquery-indexer/proxy_configs/nginx/sq.pathrocknetwork.org.conf
@@ -31,15 +31,15 @@ server {
 }
 # Coordinator Metrics Proxy
 server {
-    listen 8011;
+    listen 10081;
 #    listen [::]:8010 ssl;
 
     server_name sq.pathrocknetwork.org;
 #    ssl_certificate     /etc/letsencrypt/live/sq.pathrocknetwork.org/fullchain.pem;
 #    ssl_certificate_key /etc/letsencrypt/live/sq.pathrocknetwork.org/privkey.pem;
-    location / {
+    location /metrics/ {
 
-    proxy_pass http://127.0.0.1:8000;
+    proxy_pass http://127.0.0.1:8000/metrics/;
 
     }
 
@@ -49,9 +49,9 @@ server {
 server {
     listen 10080;
     server_name sq.pathrocknetwork.org;
-    location / {
+    location /metrics/ {
 
-    proxy_pass http://127.0.0.1:1081;
+    proxy_pass http://127.0.0.1:1080/metrics/;
 
     }
 
