--- a/subquery-indexer/proxy_configs/nginx/sq.pathrocknetwork.org.conf
+++ b/subquery-indexer/proxy_configs/nginx/sq.pathrocknetwork.org.conf
@@ -1,5 +1,5 @@
 # Indexer Proxy
-#
+# Provides SSL endpoint to query the indexer
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
@@ -15,6 +15,7 @@ server {
 
 }
 # Admin Proxy
+# Provides ssl endpoint for administrtor to use the indexer
 server {
     listen 8010 ssl;
     listen [::]:8010 ssl;
@@ -29,23 +30,9 @@ server {
     }
 
 }
-# Coordinator Metrics Proxy
-server {
-    listen 10081;
-#    listen [::]:8010 ssl;
-
-    server_name sq.pathrocknetwork.org;
-#    ssl_certificate     /etc/letsencrypt/live/sq.pathrocknetwork.org/fullchain.pem;
-#    ssl_certificate_key /etc/letsencrypt/live/sq.pathrocknetwork.org/privkey.pem;
-    location /metrics/ {
-
-    proxy_pass http://127.0.0.1:8000/metrics/;
-
-    }
-
-}
 
 # Indexer Proxy Metrics
+# Provides metrics only endpoint non ssl
 server {
     listen 10080;
     server_name sq.pathrocknetwork.org;
