--- a/subquery-indexer/proxy_configs/nginx/sq.pathrocknetwork.org.conf
+++ b/subquery-indexer/proxy_configs/nginx/sq.pathrocknetwork.org.conf
@@ -32,13 +32,13 @@ server {
 }
 
 # Indexer Proxy Metrics
-# Provides metrics only endpoint non ssl
+# Exposes metrics from administratove port without exposing any other paths.
 server {
     listen 10080;
     server_name sq.pathrocknetwork.org;
     location /metrics/ {
 
-    proxy_pass http://127.0.0.1:1080/metrics/;
+    proxy_pass http://127.0.0.1:8000/metrics/;
 
     }
 
