--- a/subquery-indexer/proxy_configs/nginx/sq.pathrocknetwork.org.conf
+++ b/subquery-indexer/proxy_configs/nginx/sq.pathrocknetwork.org.conf
@@ -15,7 +15,7 @@ server {
 
 }
 # Admin Proxy
-# Provides ssl endpoint for administrtor to use the indexer
+# Provides ssl endpoint for admin to use the indexer
 server {
     listen 8010 ssl;
     listen [::]:8010 ssl;
