--- a/subquery-indexer/docker-compose/my-updated-docker-compose.yml
+++ b/subquery-indexer/docker-compose/my-updated-docker-compose.yml
@@ -9,7 +9,120 @@ services:
       - 5432
     volumes:
       - .data/postgres:/var/lib/postgresql/data
-    # Set database password
+    environment:
+      POSTGRES_PASSWORD: db_password
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  coordinator:
+    image: subquerynetwork/indexer-coordinator:latest
+    container_name: astar_indexer_coordinator
+    restart: always
+    ports:
+      - 127.0.0.1:8000:8000
+    depends_on:
+      'postgres':
+        condition: service_healthy
+      'ipfs':
+        condition: service_healthy
+    volumes:
+      - .projects:/usr/projects
+      - /var/run/docker.sock:/var/run/docker.sock
+    command:
+      - --network=kepler # Change to the network you want to index [testnet | kepler | mainnet]
+      - --postgres-host=postgres
+      - --network-endpoint="https://sq.pathrocknetwork.org:8033"
+      - --postgres-password=db_password # Change to your postgres password
+      - --postgres-port=5432
+      - --port=8000
+      - --start-port=3100 # The start port number for the indexer node, by default: 3001
+      - --secret-key=secret_key # Change to your own secret key to encrypt the controller privatekey which store in db
+      - --ipfs=http://indexer_ipfs:8080/api/v0/ # Use docker/local ipfs endpoint or
+      #- --ipfs=https://unauthipfs.subquery.network/ipfs/api/v0 # subquery's ipfs (heavily ratelimited)
+    healthcheck:
+      test:
+        [
+          'CMD',
+          'curl',
+          '-i',
+          '-X POST',
+          'http://127.0.0.1:8000/graphql',
+          "-H 'Content-Type: application/json'",
+          '-d ''{ "query": "query { accountMetadata { network } }" }''',
+        ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  redis:
+    image: redis:7-alpine
+    container_name: indexer_cache
+    restart: always
+    expose:
+      - 6379
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    healthcheck:
+      test: ['CMD', 'redis-cli', '--raw', 'incr', 'ping']
+
+  proxy:
+    image: subquerynetwork/indexer-proxy:latest
+    container_name: astar_indexer_proxy
+    restart: always
+    ports:
+      - 7370:7370/udp
+      - 0.0.0.0:1080:1080
+    command:
+      - --host=0.0.0.0
+      - --port=1080
+      - --auth
+      - --network=kepler # network type, need to be same with coordinator
+      - --jwt-secret=secret_key # change to any random string value
+      - --secret-key=secret_key # keep same with coordinator secret key
+      - --service-url=http://127.0.0.1:8000
+      - --network-endpoint="https://sq.pathrocknetwork.org:8033" # Private Astar network endpoint
+      - --token-duration=24 # query auth token validity [hours]
+      - --redis-endpoint=redis://indexer_cache
+      - --metrics-token=thisismyAuthtoken # change to any random string value
+    healthcheck:
+      test: ['CMD-SHELL', 'curl http://localhost:1080/healthy >/dev/null 2>&1 || exit 1']
+      interval: 30s
+      timeout: 30s
+      retries: 5
+
+  ipfs:
+    image: ipfs/kubo:v0.20.0
+    container_name: indexer_ipfs
+    environment:
+      IPFS_PROFILE: server
+    volumes:
+      - .data/ipfs/export:/export
+      - .data/ipfs/data:/data/ipfs
+      - ./ipfs/ipfs.sh:/container-init.d/ipfs.sh
+    ports:
+      - 4001:4001
+      - 4001:4001/udp
+      - 127.0.0.1:5001:5001
+      - 127.0.0.1:8080:8080
+
+networks:
+  default:
+    name: indexer_services
+subquery@arthera:~/subquery-indexer$ cat docker-compose.yml
+version: '3'
+
+services:
+  postgres:
+    image: postgres:16-alpine
+    container_name: indexer_db
+    restart: always
+    expose:
+      - 5432
+    volumes:
+      - .data/postgres:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: gPfpuTq4xRHkRJqLd
     healthcheck:
@@ -22,8 +135,6 @@ services:
     image: subquerynetwork/indexer-coordinator:v1.3.13
     container_name: indexer_coordinator
     restart: always
-    # Due to security concerns only expose port 8000 locally. 
-    # The nginx proxy will serve this on port 8010
     ports:
       - 127.0.0.1:8000:8000
     depends_on:
@@ -35,23 +146,16 @@ services:
       - .projects:/usr/projects
       - /var/run/docker.sock:/var/run/docker.sock
     command:
-      # Change to the network you want to index [testnet | kepler | mainnet]
-      - --network=kepler 
-      # Set database host to local address
-      - --postgres-host=127.0.0.1
-      # Changed the websocket endpoint to http as websockets do not appear to work yet.
-      - --network-endpoint=http://sq.pathrocknetwork.org:9933
-      # Set to correct db password from above
+      - --network=kepler # Change to the network you want to index [testnet | kepler | mainnet]
+      - --postgres-host=postgres
+      - --network-endpoint="http://sq.pathrocknetwork.org:9933"
       - --postgres-password=gPfpuTq4xRHkRJqLd # Change to your postgres password
       - --postgres-port=5432
       - --port=8000
       - --start-port=3100 # The start port number for the indexer node, by default: 3001
-      # Change to your own secret key to encrypt the controller privatekey which store in db
-      - --secret-key=NMQjCc74qgMZjXSMV 
-      # Use docker/local ipfs endpoint 
-      - --ipfs=http://indexer_ipfs:8080/api/v0/ 
-      # subquery's ipfs (heavily ratelimited)
-      #- --ipfs=https://unauthipfs.subquery.network/ipfs/api/v0 
+      - --secret-key=NMQjCc74qgMZjXSMV # Change to your own secret key to encrypt the controller privatekey which store in db
+      - --ipfs=http://indexer_ipfs:8080/api/v0/ # Use docker/local ipfs endpoint or
+      #- --ipfs=https://unauthipfs.subquery.network/ipfs/api/v0 # subquery's ipfs (heavily ratelimited)
     healthcheck:
       test:
         [
@@ -84,25 +188,19 @@ services:
     restart: always
     ports:
       - 7370:7370/udp
-      # Set to run on localhost because the proxy will forward traffic
-      - 127.0.0.1:1080:1080
+      - 0.0.0.0:1080:1080
     command:
-      # Set to run on localhost because the proxy will forward traffic
-      - --host=127.0.0.1
+      - --host=0.0.0.0
       - --port=1080
       - --auth
-      # network type, need to be same with coordinator
-      - --network=kepler 
-      # change to any random string value. 
-      - --jwt-secret=NMQjCc74qgMZjXSMV 
-      # keep same with coordinator secret key
-      - --secret-key=NMQjCc74qgMZjXSMV 
+      - --network=kepler # network type, need to be same with coordinator
+      - --jwt-secret=NMQjCc74qgMZjXSMV # change to any random string value
+      - --secret-key=NMQjCc74qgMZjXSMV # keep same with coordinator secret key
       - --service-url=http://127.0.0.1:8000
-      - --network-endpoint=http://sq.pathrocknetwork.org:9933 # Private Astar network endpoint
+      - --network-endpoint="http://sq.pathrocknetwork.org:9933" # Private Astar network endpoint
       - --token-duration=24 # query auth token validity [hours]
       - --redis-endpoint=redis://indexer_cache
-      # change to any random string value. I did not change because its just metrics.
-      - --metrics-token=thisismyAuthtoken  
+      - --metrics-token=thisismyAuthtoken # change to any random string value
     healthcheck:
       test: ['CMD-SHELL', 'curl http://localhost:1080/healthy >/dev/null 2>&1 || exit 1']
       interval: 30s
