--- a/subquery-indexer/proxy_configs/haproxy/haproxy.cfg
+++ b/subquery-indexer/proxy_configs/haproxy/haproxy.cfg
@@ -44,14 +44,26 @@ backend admin_backend
     default-server check maxconn 25
     server subgraph_admin :8000
 
-frontend indexer_proxy
-    bind :443 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
-    http-request redirect scheme https unless { ssl_fc }
-    use_backend indexer_backend
-    default_backend indexer_backend
+frontend indexer
+  bind :443 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
+  maxconn 10000
+  http-request redirect scheme https unless { ssl_fc }
+  acl hdr_connection_upgrade hdr(Connection)  -i upgrade
+  acl hdr_upgrade_websocket  hdr(Upgrade)     -i websocket
+  use_backend bk_ws if hdr_connection_upgrade hdr_upgrade_websocket
+  default_backend indexer_backend
 
 backend indexer_backend
-    default-server check maxconn 25
-    server indexer_proxy :1080
+  balance roundrobin
+  server indexer_proxy_1 10.0.1.2:1080 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_1
 
+frontend astar
+  bind :8844 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
+  maxconn 10000
+  http-request redirect scheme https unless { ssl_fc }
+  use_backend astar_backend
+  default_backend astar_backend
 
+backend astar_be
+  balance roundrobin
+  server astar_rpc_1 10.0.1.1:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_1
