--- a/subquery-indexer/proxy_configs/haproxy/haproxy.cfg
+++ b/subquery-indexer/proxy_configs/haproxy/haproxy.cfg
@@ -55,15 +55,21 @@ frontend indexer
 
 backend indexer_backend
   balance roundrobin
+  option httpchk HEAD /
   server indexer_proxy_1 10.0.1.2:1080 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_1
 
+backend indexer_backend_ws                                                    
+    balance roundrobin
+    server indexer_proxy_1 10.0.1.2:1080 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_1
+
 frontend astar
-  bind :8844 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
-  maxconn 10000
-  http-request redirect scheme https unless { ssl_fc }
-  use_backend astar_backend
-  default_backend astar_backend
+    bind :8844 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
+    maxconn 10000
+    http-request redirect scheme https unless { ssl_fc }
+    use_backend astar_backend
+    default_backend astar_backend
 
 backend astar_be
-  balance roundrobin
-  server astar_rpc_1 10.0.1.1:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_1
+    balance roundrobin
+    option httpchk HEAD /
+    server astar_rpc_1 10.0.1.1:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_1
