--- a/subquery-indexer/proxy_configs/haproxy/haproxy.cfg
+++ b/subquery-indexer/proxy_configs/haproxy/haproxy.cfg
@@ -33,24 +33,26 @@ defaults
         errorfile 503 /etc/haproxy/errors/503.http
         errorfile 504 /etc/haproxy/errors/504.http
 
-
+############### 
+# Proxy Stats
+########
 frontend admin_proxy
-    bind :8111 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
+    bind 0.0.0.0:8111 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
     http-request redirect scheme https unless { ssl_fc }
     use_backend admin_backend
     default_backend admin_backend
 
 backend admin_backend
     default-server check maxconn 25
-    server subgraph_admin :8000
+    server admin_backend :8000
 
+############### 
+# Indexer Admin
+########
 frontend indexer
   bind :443 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
   maxconn 10000
   http-request redirect scheme https unless { ssl_fc }
-  acl hdr_connection_upgrade hdr(Connection)  -i upgrade
-  acl hdr_upgrade_websocket  hdr(Upgrade)     -i websocket
-  use_backend bk_ws if hdr_connection_upgrade hdr_upgrade_websocket
   default_backend indexer_backend
 
 backend indexer_backend
@@ -58,18 +60,28 @@ backend indexer_backend
   option httpchk HEAD /
   server indexer_proxy_1 10.0.1.2:1080 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_1
 
-backend indexer_backend_ws                                                    
-    balance roundrobin
-    server indexer_proxy_1 10.0.1.2:1080 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_1
 
+###################### 
+# Astar Template
+########
 frontend astar
     bind :8844 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
     maxconn 10000
     http-request redirect scheme https unless { ssl_fc }
-    use_backend astar_backend
+    acl hdr_connection_upgrade hdr(Connection)  -i upgrade
+    acl hdr_upgrade_websocket  hdr(Upgrade)     -i websocket
+    use_backend astar_ws_be if hdr_connection_upgrade hdr_upgrade_websocket
     default_backend astar_backend
 
+backend astar_ws_be                                                    
+    balance roundrobin
+    option http-server-close
+    timeout tunnel 1h
+    server astar_ws_1 10.0.10.2:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_ws_1
+    server astar_ws_2 10.0.10.3:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_ws_2
+    
 backend astar_be
     balance roundrobin
     option httpchk HEAD /
-    server astar_rpc_1 10.0.1.1:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_1
+    server astar_rpc_1 10.0.10.2:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_1
+    server astar_rpc_2 10.0.10.3:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_2
