--- a/subquery-indexer/Database_Setup/docker-compose.yml
+++ b/subquery-indexer/Database_Setup/docker-compose.yml
@@ -1,12 +1,20 @@
 version: "3"
 
 services:
-  db:
-    image: postgres:15
+  postgres:
+    image: postgres:16-alpine
+    container_name: indexer_db
+    restart: always
+    expose:
+      - 5432
+    volumes:
+      - .data/postgres:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: squid
-      POSTGRES_PASSWORD: DEFAULT
-    ports:
-      - "${DB_PORT}:5432"
-      # command: ["postgres", "-c", "log_statement=all"]
+      POSTGRES_PASSWORD: db_pass
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 5s
+      timeout: 5s
+      retries: 5
     shm_size: 1gb
