--- a/Subquery/Indexer/proxy_configs/haproxy/haproxy.cfg
+++ b/Subquery/Indexer/proxy_configs/haproxy/haproxy.cfg
@@ -36,36 +36,43 @@ defaults
 ############### 
 # Proxy Stats
 ########
-frontend admin_proxy
-    bind 0.0.0.0:8111 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
-    http-request redirect scheme https unless { ssl_fc }
-    use_backend admin_backend
-    default_backend admin_backend
-
-backend admin_backend
-    default-server check maxconn 25
-    server admin_backend :8000
+listen stats
+    bind :::1976 v4v6 ssl crt /etc/ssl/rpc1.pathrocknetwork.org/rpc1.pathrocknetwork.org.pem
+    mode http
+    stats enable
+    stats hide-version
+    stats realm Haproxy\ Statistics
+    stats uri /
+    stats auth Pathrock:Network
 
 ############### 
-# Indexer Admin
+# Lets Encrypt
 ########
-frontend indexer
-  bind :443 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
-  maxconn 10000
-  http-request redirect scheme https unless { ssl_fc }
-  default_backend indexer_backend
+# The frontend only listens on port 80
+# If it detects a LetsEncrypt request, is uses the LE backend
+# Else it goes to the default backend for the web servers
+frontend certbot
+    bind :::80 v4v6
+    # Test URI to see if its a letsencrypt request
+    acl letsencrypt-acl path_beg /.well-known/acme-challenge/
+    use_backend letsencrypt if letsencrypt-acl
+    default_backend rpc1_https
 
-backend indexer_backend
-  balance roundrobin
-  option httpchk HEAD /
-  server indexer_proxy_1 10.0.1.2:1080 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_1
+
+backend letsencrypt
+    server le 127.0.0.1:8888 check maxconn 1000 inter 5s fall 3 rise 10
+
+backend rpc1_https
+    server web1 10.241.140.3:80 check maxconn 1000 inter 5s fall 3 rise 10
+
+
 
 
 ###################### 
 # Astar Template
 ########
 frontend astar
-    bind :8844 ssl crt /etc/ssl/indexer.imstaked.com/indexer.imstaked.com.pem
+    bind :::8844 v4v6 ssl crt /etc/ssl/rpc1.pathrocknetwork.org/rpc1.pathrocknetwork.org.pem
     maxconn 10000
     http-request redirect scheme https unless { ssl_fc }
     acl hdr_connection_upgrade hdr(Connection)  -i upgrade
@@ -77,11 +84,33 @@ backend astar_ws_be
     balance roundrobin
     option http-server-close
     timeout tunnel 1h
-    server astar_ws_1 10.0.10.2:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_ws_1
-    server astar_ws_2 10.0.10.3:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_ws_2
+    server astar_ws_1 10.241.140.3:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_ws_1
+#    server astar_ws_2 10.0.10.3:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_ws_2
     
-backend astar_be
+backend astar_backend
     balance roundrobin
-    option httpchk HEAD /
-    server astar_rpc_1 10.0.10.2:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_1
-    server astar_rpc_2 10.0.10.3:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_2
+    server astar_rpc_1 10.241.140.3:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_1
+#    server astar_rpc_2 10.0.10.3:9933 check maxconn 1000 inter 5s fall 3 rise 10 weight 10 cookie astar_rpc_2
+
+#####################
+# Ipfs
+####################
+frontend ipfs_admin
+    bind :::5511 v4v6 ssl crt /etc/ssl/rpc1.pathrocknetwork.org/rpc1.pathrocknetwork.org.pem
+    maxconn 10000
+    http-request redirect scheme https unless { ssl_fc }
+    default_backend ipfs_be
+
+backend ipfs_be
+    option forwardfor
+    server ipfs_admin 10.241.140.65:5001 check maxconn 1000 inter 5s fall 3 rise 10 weight 10
+
+frontend ipfs_subgraph
+    bind :::5512 v4v6 ssl crt /etc/ssl/rpc1.pathrocknetwork.org/rpc1.pathrocknetwork.org.pem
+    maxconn 10000
+    http-request redirect scheme https unless { ssl_fc }
+    default_backend ipfs_sub_be
+
+backend ipfs_sub_be
+    option forwardfor
+    server ipfs_data 10.241.140.65:8080 check maxconn 1000 inter 5s fall 3 rise 10 weight 10
