--- a/Subquery/subql-node/subquery-kusama-node.service
+++ b/Subquery/subql-node/subquery-kusama-node.service
@@ -11,7 +11,7 @@ User=subquery
 SyslogIdentifier=subquery-kusama
 SyslogFacility=local7
 KillSignal=SIGHUP
-ExecStart=/usr/bin/node --subquery ipfs://QmXwfCF8858YY924VHgNLsxRQfBLosVbB31mygRLhgJbWn \
+ExecStart=/usr/bin/subql-node --subquery ipfs://QmXwfCF8858YY924VHgNLsxRQfBLosVbB31mygRLhgJbWn \
      --db-schema schema_qmxwfcf8858yy92 \
      --subscription true \
      --batch-size 50 \
