--- a/Subquery/subql-node/subquery-kusama-node.service
+++ b/Subquery/subql-node/subquery-kusama-node.service
@@ -5,6 +5,7 @@ StartLimitIntervalSec=0
 
 [Service]
 Type=simple
+EnvironmentFile=/home/subquery/subquery/.env
 Restart=on-failure
 RestartSec=10
 User=subquery
