--- a/Blockchain Nodes/Aleph-Zero/aleph_environment.env
+++ b/Blockchain Nodes/Aleph-Zero/aleph_environment.env
@@ -21,8 +21,7 @@ export VALIDATOR="true"
 export RPC_MAX_CONNECTIONS="100"
 export NAME="Pathrock"
 PUBLIC_ADDR="/dns4/rpc2.pathrocknetwork.org/tcp/50555"
-
-
+ALEPH_ZERO_CLI_ARGS="--base-path=/home/aleph/.aleph-zero --bootnodes "${BOOT_NODES}" --state-pruning archive --backup-path /backups --db paritydb --chain --mainnet --public-addr /dns/rpc2.pathrocknetwork.org/tcp/33373 --rpc-methods Unsafe --no-beefy --pruning archive --name ImStaked --execution=Native --wasm-execution=compiled --port 33373 --rpc-port=9527 --rpc-cors all --rpc-max-connections=500 --pool-limit "${POOL_LIMIT}" --prometheus-external --prometheus-port=9742 --rpc-external --unsafe-rpc-external --enable-log-reloading --rpc-methods=Safe --rpc-max-request-size=1024 --rpc-max-response-size=1024 --telemetry-url='wss://telemetry.polkadot.io/submit/ 0' --no-private-ip --no-mdns"
 
 
 
