--- a/Blockchain Nodes/Acala/acala.service
+++ b/Blockchain Nodes/Acala/acala.service
@@ -11,21 +11,19 @@ User=<username>
 SyslogIdentifier=acala
 SyslogFacility=local7
 KillSignal=SIGHUP
-ExecStart=<path-to-binary>/acala \
-    --base-path=<path-to-acala-data>/data \
+ExecStart=/usr/local/bin/acala \
+    --base-path=/home/acala/.acala/data \
     --chain=acala \
-    --name="<nodename>" \
+    --name="PathrockNetwork-1" \
     --pruning=archive \
     --ws-external \
     --rpc-external \
     --rpc-cors=all \
     --ws-port=9944 \
     --rpc-port=9933 \
-    --ws-max-connections=2000 \
+    --ws-max-connections=1000 \
     --execution=wasm \
-    -- \
-    --chain=kusama \
-    --name="<nodename> (Relay chain)"
+    --relay-chain-rpc-urls=wss://sgd.pathrocknetwork.org:5321
 
 [Install]
 WantedBy=multi-user.target
