--- a/Blockchain Nodes/Acala/acala.service
+++ b/Blockchain Nodes/Acala/acala.service
@@ -7,26 +7,29 @@ StartLimitIntervalSec=0
 Type=simple
 Restart=on-failure
 RestartSec=10
-User=<username>
+User=acala
 SyslogIdentifier=acala
 SyslogFacility=local7
 KillSignal=SIGHUP
 ExecStart=/usr/local/bin/acala \
     --base-path=/home/acala/.acala/data \
     --chain=acala \
+    --port 16633 \
+    --database rocksdb \
     --name="PathrockNetwork-1" \
     --state-pruning=archive \
-    --blocks-pruning=archive
-    --port=16333 \
+    --blocks-pruning=archive \
     --unsafe-rpc-external \
     --rpc-external \
     --rpc-cors=all \
-    --ws-port=9944 \
     --rpc-port=9933 \
     --rpc-max-connections=1000 \
+    --prometheus-external \
+    --prometheus-port 9727 \
     --execution=wasm \
-    --relay-chain-rpc-urls=wss://sgd.pathrocknetwork.org:5321
-
+    --no-private-ip \
+    --no-mdns \
+    --relay-chain-rpc-urls=wss://sgd.proxy.pathrocknetwork.org:9966
 
 [Install]
 WantedBy=multi-user.target
