--- a/Blockchain Nodes/kilt/kilt.service
+++ b/Blockchain Nodes/kilt/kilt.service
@@ -1,1 +1,35 @@
+[Unit]
+Description="Kilt systemd service"
+After=network.target
+StartLimitIntervalSec=0
 
+[Service]
+Type=simple
+Restart=on-failure
+RestartSec=10
+User=kilt
+SyslogIdentifier=kilt
+SyslogFacility=local7
+KillSignal=SIGHUP
+ExecStart=/usr/local/bin/kilt \
+    --base-path=/home/kilt/.kilt/data \
+    --chain=kilt \
+    --port 16433 \
+    --database rocksdb \
+    --name="PathrockNetwork-1" \
+    --state-pruning=archive \
+    --blocks-pruning=archive \
+    --unsafe-rpc-external \
+    --rpc-external \
+    --rpc-cors=all \
+    --rpc-port=9984 \
+    --rpc-max-connections=1000 \
+    --prometheus-external \
+    --prometheus-port 7705 \
+    --execution=wasm \
+    --no-private-ip \
+    --no-mdns \
+    --relay-chain-rpc-urls=
+
+[Install]
+WantedBy=multi-user.target
